# CppIntroduction

./: .gitignore  LICENSE.txt  README.md  function.h  main.cpp
1) Types and memory/: Makefile  README.md  function.cpp
2) Classes/: Makefile  README.md  function.cpp  function.h  main.cpp  vettore.cpp  vettore.h
3) Derivatives computation/: FiniteDifferenceClass.cpp  FiniteDifferenceClass.h  Grid.cpp  Grid.h  Makefile  README.md  data.txt  functions.cpp  functions.h  main.cpp
4) Linear scalar hyperbolic equation/: CMakeLists.txt  Makefile  Numerics.cpp  Numerics.h  README.md  Solver.cpp  Solver.h  advectionEquation  data.txt  data_LW_100.txt  data_LW_1000.txt  data_LW_500.txt  main.cpp
4) Linear scalar hyperbolic equation/include/: Numerics.h  Solver.h
4) Linear scalar hyperbolic equation/src/: Numerics.cpp  Solver.cpp  main.cpp
5) Burgers/: CMakeLists.txt  Makefile  README.md  burgers
5) Burgers/include/: FluxLimiter.h  GoverningEquation.h  Grid.h  NumericalFlux.h  Solution.h  Solver.h
5) Burgers/src/: FluxLimiter.cpp  GoverningEquation.cpp  Grid.cpp  NumericalFlux.cpp  Solution.cpp  Solver.cpp  main.cpp
Mesh/: meshEuler.geo
Mesh/naca0012/: meshEuler.geo  naca0012.cfg
Mesh/naca0012/NS/: FIELDHybrid.geo  mesh.geo  meshNS.su2  sqare.geo
Mesh/naca0012/euler/: flow.vtk  history.csv  mesh.geo  mesh.su2  naca0012.cfg  surface_flow.csv  surface_flow.vtk
